--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
-product.not.found=Product not found!!
-cart.not.found=Cart not found!!
+product.not.found=Product not found.
+cart.not.found=Cart not found.
